message TestProto {
  required double double_field = 1;
  required float float_field = 2;
  required int32 int32_field = 3;
  required bool bool_field = 4;
  required string string_field = 5;
}
